# tmpofd

./: .gitignore  CMakeLists.txt
.github/workflows/: build_on_ubuntu.yml  cmake-multi-platform.yml
demo/: ofd_entry.cc  ofd_entry.h
templates/: version.h.in
test/: CMakeLists.txt
test/base/: CMakeLists.txt  version.cc
test/refl/: CMakeLists.txt  refl.cc
test/serd/: CMakeLists.txt
test/serd/traits/: CMakeLists.txt  serd_traits.cc
tmpofd/elem/ofd/: custom_data.h  custom_datas.h  doc_body.h  doc_info.h  keyword.h  keywords.h  ofd.h  version.h  versions.h
tmpofd/elem/type_def/: type_def.h
tmpofd/element/definitions/: definitions.h
tmpofd/element/ofd/: custom_data.h  custom_datas.h  doc_body.h  doc_info.h  keyword.h  keywords.h  ofd.h  version.h  versions.h
tmpofd/refl/: reflect_begin.h  reflect_end.h  reflection.h  traits.h
tmpofd/serd/: deserialization.h  serialization.h  traits.h
tmpofd/util/: reflect_begin.h  reflect_end.h  reflection.h  relfection.h  traits.h  type_traits.h
